# capygrad

./: .gitignore  .pdm-python  README.md  pyproject.toml
src/capygrad/: __init__.py  function.py  value.py
src/capygrad/fn/: __init__.py  basic.py  core.py  math.py  tensor.py  trig.py
tests/: __init__.py
