[project]
name = "capygrad"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AutumnAurelium"},
]
dependencies = [
    "numpy>=2.1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest tests/"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
]
